--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/charity_donation?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=coderslab
+spring.jpa.properties.hibernate.hbm2ddl.import_files=data.sql
 
 
 spring.mvc.view.prefix=/WEB-INF/views/
