--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.web.locale-resolver=fixed
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
+
+spring.main.allow-bean-definition-overriding=true
