--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,10 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 
 spring.main.allow-bean-definition-overriding=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=info.egrades@gmail.com
+spring.mail.password=pglbeckzugfkvnsu
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
